fix edge tooltip styling, address tooltip behind nav window

--- a/src/Components/PathObject/PathObject.module.scss
+++ b/src/Components/PathObject/PathObject.module.scss
@@ -65,7 +65,7 @@
     margin: 0;
     list-style-type: none;
   }
-  .predicate {
+  .predicate, .predicate span {
     font-size: 16px !important;
     font-weight: 700 !important;
     margin-bottom: 0 !important;
