--- a/src/Components/Tooltip/Tooltip.module.scss
+++ b/src/Components/Tooltip/Tooltip.module.scss
@@ -6,7 +6,7 @@
   border-radius: $defaultBorderRadius;
   padding: $xs;
   max-width: 330px !important;
-  z-index: 90;
+  z-index: 150;
   text-align: left;
   box-shadow: $dropShadowHover;
   p {
